--- a/szablon/blocks/main.sass
+++ b/szablon/blocks/main.sass
@@ -29,3 +29,4 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 
 /* WEBSITE BLOCKS
  *==========================================================================
+@import "../blocks/header/header"
