Mapy Google Narazie JS, Header

--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -1,7 +1,7 @@
 doctype html
 html( lang="pl")
-    include _head.jade
-    body
-        .box
-            .box2
-                p tester
+  include _head.jade
+  body
+    include _header.jade
+    .googleMaps
+      .googleMaps__API#googleMaps
