--- a/szablon/blocks/header/_header.sass
+++ b/szablon/blocks/header/_header.sass
@@ -26,6 +26,7 @@
     &.-hidden
       opacity: 0
       transform: scale(2, 2)
+      z-index: 0
   &__item
     list-style-type: none
     text-align: center
@@ -39,3 +40,6 @@
     display: block
     background: #8AD3AF
     border-radius: 6px
+  &__buttonIcon
+    font-size: 3em
+    line-height: 80px
