--- a/szablon/blocks/main.sass
+++ b/szablon/blocks/main.sass
@@ -34,3 +34,5 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
  *==========================================================================
 @import "googleMaps/googleMaps"
 @import "header/header"
+
+@import "panelLogin/panelLogin"
