--- a/szablon/jade/_header.jade
+++ b/szablon/jade/_header.jade
@@ -6,15 +6,28 @@
   .header__switcher.-hidden
     .background
     ul.header__panel
-      li.header__item
+      li.header__item#panel-loginButton
         span.header__button
           span.header__buttonIconBG
+            .header__buttonIcon.fa.fa-sign-in
           | Logowanie
       li.header__item
         span.header__button
           span.header__buttonIconBG
-          | Logowanie
+            .header__buttonIcon.fa.fa-sign-in
+          | Rejestracja
       li.header__item
         span.header__button
           span.header__buttonIconBG
-          | Logowanie
+            .header__buttonIcon.fa.fa-sign-in
+          | Odzyskaj konto
+      li.header__item
+        span.header__button
+          span.header__buttonIconBG
+            .header__buttonIcon.fa.fa-power-off
+          | Wyloguj
+      li.header__item
+        span.header__button
+          span.header__buttonIconBG
+            .header__buttonIcon.fa.fa-sign-in
+          | Ustawienia
