--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -5,3 +5,17 @@ html( lang="pl")
     include _header.jade
     .googleMaps
       .googleMaps__API#googleMaps
+
+
+    .panelLogin.-hidden
+      .panelLogin__wrapper
+        .panelLogin__title Panel Logowania
+        .panelLogin__text
+          | Jakis tam tekst wstępny
+          .panelLogin__form
+            input(placeholder="Prosze podać login")
+            input(placeholder="Prosze podać nazwisko")
+            button(type="submit") Zaloguj
+        span.panelLogin__close
+          span.panelLogin__icon.fa.fa-times
+
