--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -22,6 +22,18 @@
 
   &__wrapper
     position: relative
+  &__title
+    font-family: Lato, sans-serif
+    font-size: 24px
+    font-weight: 700
+    line-height: 26px
+    margin-bottom: 15px
+  &__text
+    font-family: Lato, sans-serif
+    font-size: 16px
+    font-weight: 700
+    line-height: 18px
+    margin-bottom: 15px
   &__close
     position: absolute
     top: 2px
