--- a/szablon/css/main.css
+++ b/szablon/css/main.css
@@ -5611,6 +5611,22 @@ a.tabnav-extra:hover {
   position: relative;
 }
 
+.panelLogin__title {
+  font-family: Lato, sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 26px;
+  margin-bottom: 15px;
+}
+
+.panelLogin__text {
+  font-family: Lato, sans-serif;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 18px;
+  margin-bottom: 15px;
+}
+
 .panelLogin__close {
   position: absolute;
   top: 2px;
