--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -10,12 +10,11 @@ html( lang="pl")
     .panelLogin.-hidden
       .panelLogin__wrapper
         .panelLogin__title Panel Logowania
-        .panelLogin__text
-          | Jakis tam tekst wstępny
-          .panelLogin__form
-            input(placeholder="Prosze podać login")
-            input(placeholder="Prosze podać nazwisko")
-            button(type="submit") Zaloguj
+        .panelLogin__text Prosze podać dane do logowania.
+        .panelLogin__form
+          input(placeholder="Prosze podać login")
+          input(placeholder="Prosze podać nazwisko")
+          button(type="submit") Zaloguj
         span.panelLogin__close
           span.panelLogin__icon.fa.fa-times
 
