--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -12,8 +12,8 @@
 
   margin: 0 auto
   background-color: rgba(255, 255, 255, 0.75)
-  border: 1px solid black
-  border-radius: 15px
+  border: 1px solid rgba(0, 0, 0, 0.5)
+  border-radius: 10px
   padding: 20px
 
   &.-hidden
@@ -34,10 +34,25 @@
     font-weight: 700
     line-height: 18px
     margin-bottom: 15px
+  &__form
+    padding: 5px
+    margin: 0 auto
+    text-align: center
+    input
+      display: block
+      min-width: 200px
+      margin: 5px auto
+      padding: 8px 10px
+      border-radius: 15px
+      border: 1px solid rgba(0, 0, 0, 0.5)
+    button
+      @extend .btn
+      @extend .btn-primary
   &__close
     position: absolute
     top: 2px
     right: 2px
     color: red
+
   &__icon
     font-size: 3em
