--- a/szablon/blocks/main.sass
+++ b/szablon/blocks/main.sass
@@ -26,7 +26,9 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 @import "grid"
 @import "typography"
 
-/* WEBSITE BLOCKS
+@import "animation"
+
+/* ADDONS
  *==========================================================================
 @import "../bower_components/primer-css/scss/primer"
 
