--- a/szablon/jade/_head.jade
+++ b/szablon/jade/_head.jade
@@ -4,7 +4,7 @@ head
     meta(name='description', content='')
     meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
 
-    link(rel='shortcut icon', href='/favicon.ico')
+    link(rel='shortcut icon', href='/img/favicon/favicon.ico')
 
     script.
         document.write('<script src="http://'
