--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -1,6 +1,7 @@
 @charset "UTF-8"
 
 .panelLogin
+  transition: transform 0.36s ease
   position: absolute
   width: 300px
   height: auto
@@ -16,9 +17,12 @@
   border-radius: 5px
   box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.75)
 
+  transform: scale(1, 1)
+
   &.-hidden
     opacity: 0
     z-index: 0
+    transform: scale(0.5, 0.5)
 
   &__wrapper
     position: relative
@@ -53,6 +57,7 @@
     top: 0px
     right: 3px
     color: red
+    cursor: pointer
 
   &__icon
     font-size: 3em
