--- a/szablon/blocks/main.sass
+++ b/szablon/blocks/main.sass
@@ -37,4 +37,5 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 @import "googleMaps/googleMaps"
 @import "header/header"
 
+@import "panelWelcome/panelWelcome"
 @import "panelLogin/panelLogin"
