--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -3,9 +3,10 @@
 .panelLogin
   transition: transform 0.36s ease
   position: absolute
-  width: 300px
+  max-width: 530px
+  width: 100%
   height: auto
-  top: 30%
+  top: calc(50% - 158.5px)
   right: 0
   left: 0
   z-index: 100
@@ -15,7 +16,9 @@
   background-color: rgba(255, 255, 255, 1)
   border: 1px solid rgba(255, 255, 255, 0.5)
   border-radius: 5px
-  box-shadow: 1px 1px 5px 1px rgba(0,0,0,0.75)
+  box-shadow: 0 60px 80px 0 rgba(0, 0, 0, 0.4)
+
+  overflow: hidden
 
   transform: scale(1, 1)
 
