--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -21,7 +21,7 @@ html( lang="pl")
     .panelLogin.panel.-hidden
       .panelLogin__wrapper
         .panelLogin__title Panel Logowania
-        .panelLogin__text Prosze podać dane do logowania.
+        .panelLogin__text Prosze podać dane do logowania.!!!
         .panelLogin__form
           input(placeholder="Prosze podać login")
           input(placeholder="Prosze podać nazwisko")
