--- a/szablon/blocks/main.sass
+++ b/szablon/blocks/main.sass
@@ -39,3 +39,4 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 
 @import "panelWelcome/panelWelcome"
 @import "panelLogin/panelLogin"
+@import "panelRegister/panelRegister"
