--- a/szablon/blocks/panelRegister/_panelRegister.sass
+++ b/szablon/blocks/panelRegister/_panelRegister.sass
@@ -1,27 +1,35 @@
 @charset "UTF-8"
 
 .panelRegister
+  transition: transform 0.36s ease
   position: absolute
-  width: 500px
+  max-width: 530px
+  width: 100%
   height: auto
-  top: 30%
+  top: calc(50% - 158.5px)
   right: 0
   left: 0
   z-index: 100
   opacity: 1
 
   margin: 0 auto
-  background-color: rgba(255, 255, 255, 0.75)
-  border: 1px solid rgba(0, 0, 0, 0.5)
-  border-radius: 10px
-  padding: 20px
+  background-color: rgba(255, 255, 255, 1)
+  border: 1px solid rgba(255, 255, 255, 0.5)
+  border-radius: 5px
+  box-shadow: 0 60px 80px 0 rgba(0, 0, 0, 0.4)
+
+  overflow: hidden
+
+  transform: scale(1, 1)
 
   &.-hidden
     opacity: 0
     z-index: 0
+    transform: scale(0.5, 0.5)
 
   &__wrapper
     position: relative
+    padding: 20px
   &__title
     font-family: Lato, sans-serif
     font-size: 24px
@@ -40,7 +48,6 @@
     text-align: center
     input
       display: block
-      min-width: 200px
       margin: 5px auto
       padding: 8px 10px
       border-radius: 15px
@@ -50,9 +57,10 @@
       @extend .btn-primary
   &__close
     position: absolute
-    top: 2px
-    right: 2px
+    top: 0px
+    right: 3px
     color: red
+    cursor: pointer
 
   &__icon
     font-size: 3em
