--- a/szablon/blocks/panelWelcome/_panelWelcome.sass
+++ b/szablon/blocks/panelWelcome/_panelWelcome.sass
@@ -32,12 +32,13 @@
     padding: 20px
   &__title
     font-family: Lato, sans-serif
-    font-weight: 700
+    font-weight: 300
     line-height: 26px
     margin-bottom: 15px
     font-size: 25.5px
     letter-spacing: 2px
     text-align: center
+    text-transform: uppercase
   &__text
     font-family: Lato, sans-serif
     font-weight: 700
@@ -57,7 +58,11 @@
       margin: 5px auto
       padding: 8px 10px
       border-radius: 15px
-      border: 1px solid rgba(0, 0, 0, 0.5)
+      border-top: 0
+      border-left: 0
+      border-right: 0
+      border-bottom: 1px solid blue
+
     button
       @extend .btn
       @extend .btn-primary
