--- a/szablon/css/main.css
+++ b/szablon/css/main.css
@@ -5776,12 +5776,13 @@ a.tabnav-extra:hover {
 
 .panelWelcome__title {
   font-family: Lato, sans-serif;
-  font-weight: 700;
+  font-weight: 300;
   line-height: 26px;
   margin-bottom: 15px;
   font-size: 25.5px;
   letter-spacing: 2px;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .panelWelcome__text {
@@ -5807,7 +5808,10 @@ a.tabnav-extra:hover {
   margin: 5px auto;
   padding: 8px 10px;
   border-radius: 15px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid blue;
 }
 
 .panelWelcome__close {
@@ -5940,18 +5944,49 @@ a.tabnav-extra:hover {
 
 .panelLogin__title {
   font-family: Lato, sans-serif;
-  font-size: 24px;
-  font-weight: 700;
+  font-weight: 300;
   line-height: 26px;
   margin-bottom: 15px;
+  font-size: 25.5px;
+  letter-spacing: 2px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .panelLogin__text {
   font-family: Lato, sans-serif;
-  font-size: 16px;
   font-weight: 700;
-  line-height: 18px;
-  margin-bottom: 15px;
+  max-width: 350px;
+  margin: 0 auto;
+  font-size: 16px;
+  line-height: 1.3;
+  letter-spacing: 1.25px;
+  text-align: center;
+  color: #999;
+}
+
+.panelLogin__alert {
+  font-family: Lato, sans-serif;
+  font-weight: 400;
+  margin: 0 auto;
+  font-size: 12px;
+  line-height: 1.3;
+  letter-spacing: 1.35px;
+  text-align: left;
+  color: #222;
+  margin-bottom: 10px;
+}
+
+.panelLogin__alert i {
+  margin-right: 4px;
+}
+
+.panelLogin__alert.-info {
+  color: darkred;
+}
+
+.panelLogin__alert.-danger {
+  color: firebrick;
 }
 
 .panelLogin__form {
@@ -5961,19 +5996,60 @@ a.tabnav-extra:hover {
 }
 
 .panelLogin__form input {
+  font-weight: 400;
+  max-width: 300px;
+  width: 100%;
   display: block;
   margin: 5px auto;
   padding: 8px 10px;
-  border-radius: 15px;
-  border: 1px solid rgba(0, 0, 0, 0.5);
+  border-radius: 0;
+  border-top: 0;
+  border-left: 0;
+  border-right: 0;
+  border-bottom: 1px solid blue;
+  font-size: 16px;
+}
+
+.panelLogin__form input:focus {
+  border-bottom: 1px solid deepskyblue;
+}
+
+.panelLogin__form button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background: #3949ab;
+  background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(250, 198, 100, 0.27) 100%), #2976df;
+}
+
+.panelLogin__form button:hover {
+  background: #4152d2;
+  background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(250, 198, 100, 0.27) 100%), #2e8bff;
+}
+
+.panelLogin__ToRegister {
+  margin-left: 5px;
+}
+
+.panelLogin__ToRegister:hover {
+  text-decoration: underline;
 }
 
 .panelLogin__close {
+  transition: opacity 0.36s ease;
   position: absolute;
   top: 0px;
   right: 3px;
-  color: red;
+  color: #222222;
   cursor: pointer;
+  opacity: 0.4;
+}
+
+.panelLogin__close:hover {
+  opacity: 0.8;
+}
+
+.panelLogin__close .panelLogin__icon {
+  font-size: 1.8em !important;
 }
 
 .panelLogin__icon {
