--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -31,16 +31,24 @@ html( lang="pl")
         .panelLogin__form
           input(placeholder="Email")
           input(type='password' placeholder="Hasło")
-          button(type="submit") Zaloguj
+          button(type="submit") Zaloguj się
         span.panelLogin__close
           span.panelLogin__icon.fa.fa-times
-        .panelLogin__hyperlink Nie masz konta?
+        .panelLogin__navigation Nie masz konta?
           a(href="#").panelLogin__ToRegister Zarejestruj się.
 
     .panelRegister.panel.-hidden
       .panelRegister__wrapper
         .panelRegister__title Panel Rejestracji
-        .panelRegister__text Prosze podać dane do Rejestracji.!!!
+        .panelRegister__alert.-info
+          i.fa.fa-info-circle
+          | Konto o takim emailu już istnieje.
+        .panelRegister__alert.-info
+          i.fa.fa-info-circle
+          | Wprowadzone dane są nie poprawne.
+        .panelRegister__alert.-danger
+          i.fa.fa-info-circle
+          | Hasła nie są takie same.
         .panelRegister__form
           input(placeholder="Email")
           input(type='password' placeholder="Hasło")
@@ -48,4 +56,7 @@ html( lang="pl")
           button(type="submit") Zarajestuj
         span.panelRegister__close
           span.panelRegister__icon.fa.fa-times
+        .panelRegister__navigation Masz już konto?
+          a(href="#").panelRegister__ToLogin Zaloguj się.
+
 
