--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -88,12 +88,15 @@
       margin-top: 20px
       @extend .btn
       @extend .btn-primary
+      border-color: rgb(57, 73, 171)
       padding: 10px 20px
       background: rgb(57, 73, 171)
       background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(250, 198, 100, 0.27) 100%), #2976df
       &:hover
         background: rgb(65, 82, 210)
         background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(250, 198, 100, 0.27) 100%), #2e8bff
+  &__navigation
+    margin-top: 20px
   &__ToRegister
       margin-left: 5px
       &:hover
