Komunikaty do Login i Register

--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -65,6 +65,8 @@
       color: darkred
     &.-danger
       color: firebrick
+    &.-hidden
+      display: none
   &__form
     padding: 5px
     margin: 0 auto
