--- a/szablon/blocks/panelRegister/_panelRegister.sass
+++ b/szablon/blocks/panelRegister/_panelRegister.sass
@@ -65,6 +65,15 @@
       color: darkred
     &.-danger
       color: firebrick
+    &.-success
+      color: forestgreen
+      font-size: 16px
+      font-weight: 300
+      text-align: center
+      margin-top: 30px
+      margin-bottom: 30px
+    &.-hidden
+      display: none
   &__form
     padding: 5px
     margin: 0 auto
