Wstepny odzysk hasla

--- a/szablon/blocks/main.sass
+++ b/szablon/blocks/main.sass
@@ -40,3 +40,4 @@ $fa-font-path: "../blocks/vendor/font-awesome/fonts"
 @import "panelWelcome/panelWelcome"
 @import "panelLogin/panelLogin"
 @import "panelRegister/panelRegister"
+@import "panelResetPassword/panelResetPassword"
