--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -61,4 +61,29 @@ html( lang="pl")
         .panelRegister__navigation Masz już konto?
           a(href="#").panelRegister__ToLogin Zaloguj się.
 
+    .panelResetPassword.panel.-hidden
+      .panelResetPassword__wrapper
+        .panelResetPassword__title Panel Rejestracji
+        .panelResetPassword__alert.-info.-hidden
+          i.fa.fa-info-circle
+          | Konto o takim emailu już istnieje.
+        .panelResetPassword__alert.-info.-hidden
+          i.fa.fa-info-circle
+          | Wprowadzone dane są nie poprawne.
+        .panelResetPassword__alert.-danger.-hidden
+          i.fa.fa-info-circle
+          | Hasła nie są takie same.
+        .panelResetPassword__alert.-success.-hidden
+          | Konto zostało utworzone, na wskazany adres email został wysłany link aktywacyjny.
+        .panelResetPassword__form
+          input(placeholder="Email")
+          input(type='password' placeholder="Hasło")
+          input(type='password' placeholder="Potwierdz Hasło")
+          button(type="submit") Zarajestuj
+        span.panelResetPassword__close
+          span.panelResetPassword__icon.fa.fa-times
+        .panelResetPassword__navigation Masz już konto?
+          a(href="#").panelResetPassword__ToLogin Zaloguj się.
+
+
 
