Panel odzyskiwania hasła

--- a/szablon/blocks/panelResetPassword/_panelResetPassword.sass
+++ b/szablon/blocks/panelResetPassword/_panelResetPassword.sass
@@ -110,6 +110,10 @@
     margin-left: 5px
     &:hover
       text-decoration: underline
+  &__ToRegister
+    margin-left: 5px
+    &:hover
+      text-decoration: underline
   &__close
     transition: opacity 0.36s ease
     position: absolute
