Panel odzyskiwania hasła z komunikatami

--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -69,6 +69,10 @@ html( lang="pl")
           | Nie ma takiego konta.
         .panelResetPassword__alert.-success.-hidden
           | Na wskazany email został wysłany link weryfikacyjny.
+        .panelResetPassword__alert.-success.-hidden
+          | Nowe hasło zostało ustawione. Możesz się teraz
+          a(href="#").panelResetPassword__ToLogin zalogować
+          | .
         .panelResetPassword__form
           input(placeholder="Email")
           button(type="submit") Odzyskaj hasło
