--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -32,13 +32,14 @@
     padding: 20px
   &__title
     font-family: Lato, sans-serif
-    font-weight: 300
+    font-weight: 500
     line-height: 26px
-    margin-bottom: 15px
+    margin: 30px auto
     font-size: 25.5px
     letter-spacing: 2px
     text-align: center
-    text-transform: uppercase
+    //text-transform: uppercase
+    color: #4AAED4
   &__text
     font-family: Lato, sans-serif
     font-weight: 700
@@ -72,6 +73,8 @@
     margin: 0 auto
     text-align: center
     input
+      box-shadow: none !important
+      outline: none
       font-weight: 400
       max-width: 300px
       width: 100%
@@ -82,21 +85,65 @@
       border-top: 0
       border-left: 0
       border-right: 0
-      border-bottom: 1px solid blue
+      border-bottom: 2px solid #D2E3E9
       font-size: 16px
       &:focus
-        border-bottom: 1px solid deepskyblue
+        border-bottom: 2px solid #4AAED4
+
+    label
+      cursor: pointer
+      margin-left: 0
+      color: #9C969C
+      font-weight: 400
+      max-width: 300px
+      .icon
+        width: 17px
+        height: 18px
+        border-radius: 2px
+        position: relative
+        display: inline-block
+        border: 1px solid
+      .icon:before,.icon:after
+        content: ''
+        width: 10px
+        height: 2px
+        background: white
+        position: absolute
+        transition: all .2s ease-in-out 0s
+      .icon:before
+        left: 3px
+        width: 5px
+        bottom: 6px
+        transform: scale(0) rotate(0)
+      .icon:after
+        top: 6px
+        right: 0
+        transform: scale(0) rotate(0)
+
+    .check
+      display: none
+    .check:checked + label
+      color: #4AAED4
+      .icon
+        background: #4AAED4
+      .icon:before
+        transform: scale(1) rotate(45deg)
+      .icon:after
+        transform: scale(1) rotate(-45deg)
+
+
     button
-      margin-top: 20px
-      @extend .btn
-      @extend .btn-primary
-      border-color: rgb(57, 73, 171)
-      padding: 10px 20px
-      background: rgb(57, 73, 171)
-      background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(250, 198, 100, 0.27) 100%), #2976df
+      text-transform: uppercase
+      background: #4AAED4
+      color: white
+      border: none
+      padding: 15px 20px
+      border-radius: 25px
+      max-width: 300px
+      width: 100%
       &:hover
-        background: rgb(65, 82, 210)
-        background: linear-gradient(to top, rgba(255, 255, 255, 0) 0%, rgba(250, 198, 100, 0.27) 100%), #2e8bff
+        background: #98D3EA
+
   &__navigation
     margin-top: 20px
   &__ToRegister
