--- a/szablon/jade/main.jade
+++ b/szablon/jade/main.jade
@@ -31,6 +31,11 @@ html( lang="pl")
         .panelLogin__form
           input(placeholder="Email")
           input(type='password' placeholder="Hasło")
+          .form-checkbox
+            input(type="checkbox" checked).check#check
+            label(for="check")
+              span.icon
+              |  Zapamiętaj mnie
           button(type="submit") Zaloguj się
         span.panelLogin__close
           span.panelLogin__icon.fa.fa-times
