--- a/szablon/css/main.css
+++ b/szablon/css/main.css
@@ -5922,7 +5922,7 @@ a.tabnav-extra:hover {
   background-color: white;
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 5px;
-  box-shadow: 0 60px 80px 0 rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.45);
   overflow: hidden;
   -webkit-transform: scale(1, 1);
       -ms-transform: scale(1, 1);
@@ -5966,6 +5966,7 @@ a.tabnav-extra:hover {
 }
 
 .panelLogin__alert {
+  max-width: 300px;
   font-family: Lato, sans-serif;
   font-weight: 400;
   margin: 0 auto;
@@ -5974,7 +5975,7 @@ a.tabnav-extra:hover {
   letter-spacing: 1.35px;
   text-align: left;
   color: #222;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .panelLogin__alert i {
@@ -5999,6 +6000,16 @@ a.tabnav-extra:hover {
   text-align: center;
 }
 
+.panelLogin__form i {
+  font-size: 20px;
+  position: relative;
+  z-index: 1;
+  left: -140px;
+  top: -28px;
+  color: #7B7B7B;
+  width: 0;
+}
+
 .panelLogin__form input {
   box-shadow: none !important;
   outline: none;
@@ -6006,8 +6017,9 @@ a.tabnav-extra:hover {
   max-width: 300px;
   width: 100%;
   display: block;
-  margin: 5px auto;
-  padding: 8px 10px;
+  margin: 0px auto;
+  padding: 3px 10px;
+  padding-left: 40px;
   border-radius: 0;
   border-top: 0;
   border-left: 0;
@@ -6017,12 +6029,20 @@ a.tabnav-extra:hover {
 }
 
 .panelLogin__form input:focus {
-  border-bottom: 2px solid #4AAED4;
+  border-bottom: 2px solid #98D3EA;
+}
+
+.panelLogin__form input:focus + i {
+  color: #4AAED4;
+}
+
+.panelLogin__form .remembermebox {
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .panelLogin__form label {
   cursor: pointer;
-  margin-left: 0;
   color: #9C969C;
   font-weight: 400;
   max-width: 300px;
@@ -6035,6 +6055,7 @@ a.tabnav-extra:hover {
   position: relative;
   display: inline-block;
   border: 1px solid;
+  top: 3px;
 }
 
 .panelLogin__form label .icon:before, .panelLogin__form label .icon:after {
@@ -6117,8 +6138,8 @@ a.tabnav-extra:hover {
 .panelLogin__close {
   transition: opacity 0.36s ease;
   position: absolute;
-  top: 0px;
-  right: 3px;
+  top: 8px;
+  right: 10px;
   color: #222222;
   cursor: pointer;
   opacity: 0.4;
