--- a/szablon/blocks/panelLogin/_panelLogin.sass
+++ b/szablon/blocks/panelLogin/_panelLogin.sass
@@ -13,8 +13,8 @@
   opacity: 1
 
   margin: 0 auto
-  background-color: rgba(255, 255, 255, 1)
-  border: 1px solid rgba(255, 255, 255, 0.5)
+  background-color: rgba(255, 255, 255, 0.95)
+  border: 1px solid rgba(255, 255, 255, 1)
   border-radius: 5px
   box-shadow: 0px 0px 45px 0px rgba(0,0,0,0.45)
 
@@ -51,7 +51,7 @@
     text-align: center
     color: #999
   &__alert
-    max-width: 300px
+    //max-width: 300px
     font-family: Lato, sans-serif
     font-weight: 400
     margin: 0 auto
@@ -61,14 +61,22 @@
     text-align: left
     color: #222
     margin-bottom: 20px
+    padding: 15px
+    border-radius: 5px
+    border-left: 5px solid
     i
       margin-right: 4px
     &.-info
-      color: darkred
+      color: #fff
+      background: #dd4b39
+      border-color: #c23321
     &.-danger
       color: firebrick
     &.-hidden
       display: none
+    h3
+      margin-top: 0px
+      margin-bottom: 10px
   &__form
     padding: 5px
     margin: 0 auto
@@ -83,6 +91,7 @@
       width: 0
 
     input
+      background: transparent
       box-shadow: none !important
       outline: none
       font-weight: 400
